# dnsblock-update

./: README.md  setup.cfg  setup.py
.github/workflows/: release.yml
src/: run.py
src/dnsblock_update/: __init__.py  __main__.py  blocklist.py  config.py
test/config/: config.yaml
