[metadata]
# replace with your username:
name = dnsblock_update
version = 0.0.1
author = Simon Schneider
author_email = dev@raynigon.com
description =  Blocklist Updater for DNS Masq 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raynigon/dnsblock-update
project_urls =
    Bug Tracker = https://github.com/raynigon/dnsblock-update/issues
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src